# path_tracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  sss.txt
include/: defines.h  frame.h  frame.hpp  glms.hpp  tools.hpp
src/: .clang-format  frame.c  frame.cpp  main.c  program.cpp  tools.hpp
